Copy ServiceWorkerNavigationPreloader error when failing its ServiceWorkerFetchTask https://bugs.webkit.org/show_bug.cgi?id=234002

Reviewed by Chris Dumez.

Covered by existing tests.

* NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
When failing a ServiceWorkerNavigationPreloader, we might delete it, so it is not safe to manage a reference to its error.
Instead copy the error.



Canonical link: https://commits.webkit.org/245015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286774 268f45cc-cd09-0410-ab3c-d52691b4dbfc